2010-12-27  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh (virtualenvwrapper_get_python_version):
	Only include the major and minor numbers, not the patch level.

2010-12-26  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper/user_scripts.py (make_hook): Do not specify
	text mode when creating the files so cygwin will not replace \n
	with \r\n.

	* setup.py: Change "requires" to "install_requires" so pip will
	try to install virtualenv if it is not already there.  Add trove
	classifiers for the supported Python versions.

	* virtualenvwrapper.sh (virtualenvwrapper_get_python_version): Use
	python's -V option and cut to get the version instead of a python
	one-liner.

2010-12-24  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh (cpvirtualenv): Ensure that both pre hooks
	are run, even if one produces an error.

	* virtualenvwrapper/user_scripts.py: Change log message format.

	* tox.ini: Configuration file for running tests under tox.

	* tests/test_run_hook.sh (test_virtualenvwrapper_run_hook_permissions):
	Fix the expected output message.

	* tests/*: Make sure all of the test scripts have execute permission.

	* tests/test.sh (test_virtualenvwrapper_verify_workon_home_missing_dir_quiet_init):
	Use source instead of starting another shell, since zsh doesn't
	play nicely with inheriting environment settings otherwise.
	(test_python_interpreter_set_incorrectly): Force
	VIRTUALENVWRAPPER_PYTHON before running the script in a sub-shell.

	* tests/run_tests: Script to run through all of the other test
	scripts one at a time.

2010-09-18  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh: Apply patch from Zach Voase to fix
	lsvirtualenv under zsh.

2010-09-14  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh (workon): Use the brief list format by
	default.

2010-08-16  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper/user_scripts.py (get_env_details): New hook to